src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AssignedArea2__c</fullName>
        <label>Assigned Area (2)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>516</fullName>
                </value>
                <value>
                    <fullName>517</fullName>
                </value>
                <value>
                    <fullName>518</fullName>
                </value>
                <value>
                    <fullName>534</fullName>
                </value>
                <value>
                    <fullName>539</fullName>
                </value>
                <value>
                    <fullName>540</fullName>
                </value>
                <value>
                    <fullName>541</fullName>
                </value>
                <value>
                    <fullName>551</fullName>
                </value>
                <value>
                    <fullName>561</fullName>
                </value>
                <value>
                    <fullName>563</fullName>
                </value>
                <value>
                    <fullName>567</fullName>
                </value>
                <value>
                    <fullName>570</fullName>
                </value>
                <value>
                    <fullName>571</fullName>
                </value>
                <value>
                    <fullName>573</fullName>
                </value>
                <value>
                    <fullName>574</fullName>
                </value>
                <value>
                    <fullName>575</fullName>
                </value>
                <value>
                    <fullName>580</fullName>
                </value>
                <value>
                    <fullName>585</fullName>
                </value>
                <value>
                    <fullName>586</fullName>
                </value>
                <value>
                    <fullName>601</fullName>
                </value>
                <value>
                    <fullName>605</fullName>
                </value>
                <value>
                    <fullName>606</fullName>
                </value>
                <value>
                    <fullName>607</fullName>
                </value>
                <value>
                    <fullName>608</fullName>
                </value>
                <value>
                    <fullName>609</fullName>
                </value>
                <value>
                    <fullName>610</fullName>
                </value>
                <value>
                    <fullName>612</fullName>
                </value>
                <value>
                    <fullName>614</fullName>
                </value>
                <value>
                    <fullName>615</fullName>
                </value>
                <value>
                    <fullName>616</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedArea__c</fullName>
        <label>Assigned Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
                <value>
                    <fullName>206</fullName>
                </value>
                <value>
                    <fullName>208</fullName>
                </value>
                <value>
                    <fullName>209</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
                <value>
                    <fullName>213</fullName>
                </value>
                <value>
                    <fullName>214</fullName>
                </value>
                <value>
                    <fullName>215</fullName>
                </value>
                <value>
                    <fullName>216</fullName>
                </value>
                <value>
                    <fullName>217</fullName>
                </value>
                <value>
                    <fullName>218</fullName>
                </value>
                <value>
                    <fullName>219</fullName>
                </value>
                <value>
                    <fullName>224</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>228</fullName>
                </value>
                <value>
                    <fullName>229</fullName>
                </value>
                <value>
                    <fullName>231</fullName>
                </value>
                <value>
                    <fullName>234</fullName>
                </value>
                <value>
                    <fullName>239</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>248</fullName>
                </value>
                <value>
                    <fullName>251</fullName>
                </value>
                <value>
                    <fullName>252</fullName>
                </value>
                <value>
                    <fullName>253</fullName>
                </value>
                <value>
                    <fullName>254</fullName>
                </value>
                <value>
                    <fullName>256</fullName>
                </value>
                <value>
                    <fullName>260</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedRegion__c</fullName>
        <label>Assigned Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Fresno North &amp; South</fullName>
                </value>
                <value>
                    <fullName>Ventura/Oxnard Area</fullName>
                </value>
                <value>
                    <fullName>SF South</fullName>
                </value>
                <value>
                    <fullName>SF Central &amp; North</fullName>
                </value>
                <value>
                    <fullName>SD Area South</fullName>
                </value>
                <value>
                    <fullName>SD Area North</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara+North</fullName>
                </value>
                <value>
                    <fullName>San Jose &amp; South</fullName>
                </value>
                <value>
                    <fullName>SanGabriel Valley</fullName>
                </value>
                <value>
                    <fullName>Sacto Central</fullName>
                </value>
                <value>
                    <fullName>Sacto East</fullName>
                </value>
                <value>
                    <fullName>Sacto North</fullName>
                </value>
                <value>
                    <fullName>Sacto South</fullName>
                </value>
                <value>
                    <fullName>OC South</fullName>
                </value>
                <value>
                    <fullName>OC North</fullName>
                </value>
                <value>
                    <fullName>Oakland/East Bay</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-South</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-North</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-Central</fullName>
                </value>
                <value>
                    <fullName>Long Beach/Pasadena</fullName>
                </value>
                <value>
                    <fullName>LA Valley</fullName>
                </value>
                <value>
                    <fullName>LA Southeast</fullName>
                </value>
                <value>
                    <fullName>LA Southbay</fullName>
                </value>
                <value>
                    <fullName>LA Central</fullName>
                </value>
                <value>
                    <fullName>Bakersfield Area</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PayrollThreshold__c</fullName>
        <label>Payroll Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QB_Initials__c</fullName>
        <description>Used for REP name in Quickbooks.</description>
        <label>QB Initials</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Username__c</fullName>
        <description>Username as it appears in Quickbooks. Typically Lastname, Firstname</description>
        <label>QB Username</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveNCMUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>AssignedArea__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>PayrollThreshold__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Nurse</value>
        </filters>
        <label>Active NCM Users</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsersAssignedArea</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>AssignedArea__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>PayrollThreshold__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users - Assigned Area</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>AssignedArea__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>PayrollThreshold__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>CaseManagers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>AssignedArea__c</columns>
        <columns>AssignedRegion__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>PayrollThreshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Nurse</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PayrollThreshold__c</field>
            <operation>equals</operation>
            <value>30</value>
        </filters>
        <label>Case Managers</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>